--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -44,7 +44,7 @@
                 android:layout_marginLeft="@dimen/space_10"
                 android:layout_toEndOf="@id/back"
                 android:layout_toRightOf="@id/back"
-                android:text="CAMPAIGN DETAILS"
+                android:text="@string/campaign_detail_toolbar_text"
                 android:textColor="@color/home.toolbar.titlecolor"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/campaign_feed_register_textview_bg"
                 android:paddingLeft="10dp"
                 android:paddingTop="5dp"
@@ -70,7 +70,7 @@
                 android:text="TRACK STATUS"
                 android:textColor="@color/white"
                 android:textSize="10sp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
@@ -116,7 +116,8 @@
                 android:paddingTop="@dimen/space_10"
                 android:paddingRight="@dimen/space_15"
                 android:paddingBottom="@dimen/space_10"
-                android:text="SHARE"
+                android:text="@string/com_facebook_share_button_text"
+                android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:fontName="oswald.ttf"
@@ -192,7 +193,7 @@
                 android:layout_marginTop="@dimen/space_15"
                 android:layout_marginEnd="@dimen/space_25"
                 android:layout_marginRight="@dimen/space_25"
-                android:text="Total Payout"
+                android:text="@string/total_payout"
                 android:textColor="@color/campaign_515151"
                 android:textSize="11sp"
                 app:fontName="open_sans.ttf"
@@ -318,7 +319,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/space_5"
-                    android:text="READ THIS FIRST"
+                    android:text="@string/campaign_read_this_first"
                     android:textColor="@color/campaign_515151"
                     android:textSize="17sp"
                     app:fontName="oswald_regular.ttf"
@@ -371,7 +372,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="14dp"
                 android:lineSpacingExtra="2.1dp"
-                android:text="DESCRIPTION"
+                android:text="@string/campaign_discription"
                 android:textColor="@color/campaign_515151"
                 android:textSize="17sp"
                 app:fontName="oswald_regular.ttf"
@@ -433,7 +434,7 @@
                 android:layout_marginTop="@dimen/space_20"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="14dp"
-                android:text="DELIVERABLE TERMS"
+                android:text="@string/deliverable_types"
                 android:textColor="@color/campaign_515151"
                 android:textSize="17sp"
                 app:fontName="oswald_regular.ttf"
@@ -533,7 +534,7 @@
                 android:layout_marginLeft="@dimen/space_15"
                 android:layout_marginTop="@dimen/space_5"
                 android:background="@drawable/campaign_detail_refer_code_text_bg"
-                android:hint="REFERRAL CODE(Optional)"
+                android:hint="@string/referral_code_option"
                 android:lineSpacingExtra="2.2dp"
                 android:paddingLeft="@dimen/space_30"
                 android:paddingTop="@dimen/space_10"
@@ -630,7 +631,7 @@
             android:drawableLeft="@drawable/ic_applied_icon"
             android:drawablePadding="2dp"
             android:padding="4dp"
-            android:text="APPLIED"
+            android:text="@string/campaign_details_applied"
             android:textColor="@color/white"
             android:textSize="8sp"
             android:visibility="gone"
