--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
@@ -45,7 +45,7 @@
                 android:paddingTop="5dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="5dp"
-                android:text="SHARE"
+                android:text="@string/detail_bottom_share"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:fontName="oswald.ttf"
@@ -174,7 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Total Payout"
+                android:text="@string/total_payout"
                 android:textColor="@color/campaign_515151"
                 android:textSize="11sp"
                 app:fontName="open_sans.ttf"
