--- a/MyCity4Kids/MyCity4Kids/res/layout/reward_campaign.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/reward_campaign.xml
@@ -38,7 +38,7 @@
                 android:layout_marginLeft="@dimen/space_10"
                 android:layout_toEndOf="@id/back"
                 android:layout_toRightOf="@id/back"
-                android:text="MYMONEY CAMPAIGNS"
+                android:text="@string/campaign_listing_mymoney_campaign_toolbar_text"
                 android:textColor="@color/home.toolbar.titlecolor"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -107,7 +107,7 @@
                     android:layout_marginLeft="@dimen/space_10"
                     android:layout_marginTop="@dimen/space_5"
                     android:layout_marginBottom="@dimen/space_10"
-                    android:text="Browse. Participate. Earn"
+                    android:text="@string/brows_participate_earn_text"
                     android:textColor="@color/campaign_4A4A4A"
                     android:textSize="14sp"
                     app:fontName="oswald.ttf"
@@ -127,7 +127,7 @@
                     android:paddingTop="@dimen/space_5"
                     android:paddingRight="@dimen/space_15"
                     android:paddingBottom="@dimen/space_5"
-                    android:text="REGISTER"
+                    android:text="@string/participate_text"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     app:fontName="oswald_regular.ttf"
