--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
@@ -23,7 +23,7 @@
             android:drawableLeft="@drawable/back_arroow"
             android:drawablePadding="@dimen/space_10"
             android:drawableTint="@color/black"
-            android:text="ADD PROOF"
+            android:text="@string/add_proof"
             android:textAllCaps="true"
             android:textColor="#515151"
             android:textSize="20sp"
@@ -69,7 +69,7 @@
                 android:paddingTop="5dp"
                 android:paddingRight="15dp"
                 android:paddingBottom="5dp"
-                android:text="Submit"
+                android:text="@string/submit"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="15sp"
@@ -102,7 +102,7 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginRight="0dp"
                 android:paddingLeft="12dp"
-                android:text="Please add image proofs"
+                android:text="@string/please_add_image_proof"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
                     android:layout_marginBottom="10dp"
-                    android:text="Please add a link"
+                    android:text="@string/please_add_link"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:visibility="visible"
@@ -170,35 +170,35 @@
                 android:id="@+id/linearInstruction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_below="@+id/textAddUrlProof"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
+                android:background="@drawable/shape_rectangle_red"
+                android:orientation="vertical"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:visibility="gone"
-                android:layout_below="@+id/textAddUrlProof"
-                android:background="@drawable/shape_rectangle_red"
-                android:orientation="vertical">
+                android:visibility="gone">
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/proofInstruction"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Proof Instructions"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/proofInstruction"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/proof_instructions"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:fontName="oswald_regular.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/textInstruction"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/proofInstruction"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/campaign_list_buttons"
-                android:textColorLink="#0000ee"
-                app:fontName="open_sans.ttf" />
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textInstruction"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/proofInstruction"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/campaign_list_buttons"
+                    android:textColorLink="#0000ee"
+                    app:fontName="open_sans.ttf" />
             </LinearLayout>
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -208,7 +208,7 @@
                 android:layout_below="@+id/linearInstruction"
                 android:layout_marginTop="20dp"
                 android:paddingLeft="18dp"
-                android:text="FAQS"
+                android:text="@string/faq"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
