--- a/MyCity4Kids/MyCity4Kids/res/layout/new_video_listing_detail.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_video_listing_detail.xml
@@ -171,8 +171,8 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/saveTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_alignParentRight="true"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/space_20"
@@ -182,6 +182,7 @@
             android:layout_marginBottom="10dp"
             android:elevation="4dp"
             android:padding="15dp"
+            android:scaleType="center"
             android:tint="@color/white"
             android:visibility="visible"
             app:backgroundTint="@color/app_red"
