--- a/MyCity4Kids/MyCity4Kids/res/layout/rewards_bottom_sheet.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/rewards_bottom_sheet.xml
@@ -8,6 +8,7 @@
     android:paddingBottom="10dp"
     app:behavior_hideable="false"
     android:clickable="true"
+    android:visibility="visible"
     android:background="@drawable/shape_shadow_rectangle"
     app:behavior_peekHeight="100dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
