--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -48,7 +48,10 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
-                    android:padding="16dp"
+                    android:paddingLeft="@dimen/space_20"
+                    android:paddingTop="16dp"
+                    android:paddingRight="@dimen/space_20"
+                    android:paddingBottom="16dp"
                     android:src="@drawable/ic_flip"
                     android:tint="@color/greytxt_color" />
             </RelativeLayout>
