branch.io working

--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_my_earning_profile_pagee.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_my_earning_profile_pagee.xml
@@ -5,8 +5,8 @@
     android:viewportHeight="24">
   <path
       android:pathData="M16.1,13.7c-0.7,0 -1.3,0.1 -1.9,0.4L14,14c1,-0.8 1.9,-2 2.2,-3.3c0.8,-0.5 1.3,-1.4 1.3,-2.4V7.6c0,-0.8 -0.3,-1.5 -0.9,-2.1c-0.5,-3 -2.5,-4.7 -6,-4.7h-0.4c-2.9,0 -4.3,1.4 -5,2.6C4.9,4.2 4.8,4.9 4.7,5.5C4.2,6.1 3.8,6.8 3.8,7.6v0.8c0,0.9 0.5,1.8 1.2,2.4c0.4,1.4 1.2,2.5 2.2,3.3l-2.4,1.3c-1,0.6 -1.7,1.9 -1.7,3.2v1.1c0,1.2 0.6,2.5 7.4,2.5h2.6c0.8,0.6 1.8,1 2.8,1c2.6,0 4.7,-2.1 4.7,-4.7S18.7,13.7 16.1,13.7zM4,19.6v-1.1c0,-1 0.5,-2 1.2,-2.4l2.9,-1.6v-0.8L8,13.6c-1.1,-0.6 -1.8,-1.7 -2.2,-3.1l0,-0.2l-0.1,-0.1C5,9.8 4.7,9.1 4.7,8.4V7.6C4.7,7 4.9,6.4 5.4,6l0.1,-0.1l0,-0.1c0.1,-0.7 0.2,-1.3 0.5,-2c0.8,-1.4 2.3,-2.1 4.3,-2.1h0.4c3.1,0 4.8,1.3 5.2,4.1l0,0.1L16,6c0.4,0.4 0.7,1 0.7,1.6v0.8c0,0.7 -0.4,1.4 -1,1.7l-0.2,0.1l0,0.2c-0.3,1.3 -1.1,2.5 -2.2,3.1L13,13.7v0.9l0.3,0.1c-1.2,0.9 -1.9,2.2 -1.9,3.8c0,1.1 0.4,2.1 1,2.9h-1.8C4,21.3 4,20.1 4,19.6zM16.1,22.3c-2.1,0 -3.9,-1.7 -3.9,-3.9c0,-2.1 1.7,-3.9 3.9,-3.9c2.1,0 3.9,1.7 3.9,3.9C20,20.6 18.2,22.3 16.1,22.3z"
-      android:fillColor="#FF000000"/>
+      android:fillColor="#676767"/>
   <path
       android:pathData="M17.5,17.1h-0.6c0,-0.2 -0.1,-0.4 -0.3,-0.6h0.7c0.2,0 0.4,-0.1 0.4,-0.3c0,-0.2 -0.2,-0.3 -0.3,-0.3h-2.8c-0.2,0 -0.3,0.2 -0.3,0.3c0,0.2 0.2,0.3 0.3,0.3h0.8c0.4,0 0.7,0.3 0.8,0.6h-1.7c-0.2,0 -0.3,0.2 -0.3,0.3c0,0.1 0.1,0.3 0.3,0.3h1.7c-0.2,0.5 -0.6,0.7 -0.9,0.7h-0.8c-0.2,0 -0.3,0.2 -0.3,0.3c0,0.1 0.1,0.2 0.1,0.2l2,2c0.2,0.2 0.4,0.2 0.5,0.1c0.1,-0.1 0.3,-0.3 0,-0.6l-1.5,-1.3c0.7,0 1.4,-0.7 1.5,-1.3h0.6c0.1,0 0.3,0 0.4,-0.2C17.9,17.3 17.7,17.1 17.5,17.1z"
-      android:fillColor="#FF000000"/>
+      android:fillColor="#676767"/>
 </vector>
