--- a/MyCity4Kids/MyCity4Kids/res/layout/new_video_listing_detail.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_video_listing_detail.xml
@@ -181,12 +181,10 @@
             android:layout_marginRight="25dp"
             android:layout_marginBottom="10dp"
             android:elevation="4dp"
-            android:padding="15dp"
-            android:scaleType="center"
             android:tint="@color/white"
             android:visibility="visible"
             app:backgroundTint="@color/app_red"
-            app:srcCompat="@drawable/icon_video" />
+            app:srcCompat="@drawable/ic_video_new" />
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
