--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -541,7 +541,7 @@
         android:visibility="visible"
         app:fab_colorNormal="@color/app_red"
         app:fab_colorPressed="@color/app_red"
-        app:fab_icon="@drawable/ic_edit" />
+        app:fab_icon="@drawable/ic_edit_new" />
 
     <ProgressBar
         android:id="@+id/progressBar"
