--- a/MyCity4Kids/MyCity4Kids/res/layout/myaccount_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/myaccount_profile_activity.xml
@@ -39,7 +39,7 @@
                 android:layout_marginRight="14dp"
                 android:layout_marginTop="14dp"
                 android:padding="10dp"
-                android:src="@drawable/ic_edit" />
+                android:src="@drawable/ic_edit_new" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/authorNameTextView"
