--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -122,4 +122,24 @@
         app:rippleColor="@color/app_red"
         app:srcCompat="@drawable/ic_video_new" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddShortStory"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="right|bottom"
+        android:layout_margin="@dimen/space_20"
+        android:scaleType="center"
+        android:tint="@color/white"
+        android:visibility="gone"
+        app:backgroundTint="@color/app_red"
+        app:fab_colorNormal="@color/app_red"
+        app:fab_colorPressed="@color/app_red"
+
+        app:layout_anchorGravity="top|end"
+        app:rippleColor="@color/app_red"
+        app:srcCompat="@drawable/ic_plus" />
+
 </android.support.design.widget.CoordinatorLayout>
