--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_edit_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_edit_post_activity.xml
@@ -94,5 +94,236 @@
                 android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
+    <View
+        android:id="@+id/bottombarTopline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@+id/anonymousImageView"
+        android:background="@color/light_underline" />
 
+
+    <ImageView
+        android:id="@+id/anonymousImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/anonymousTextView"
+        android:padding="10dp"
+        android:src="@drawable/ic_incognito"
+        android:tooltipText="kbdjvkjdbfvjkdbfsvjksdbu"/>
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/anonymousTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/anonymousImageView"
+        android:layout_alignBottom="@+id/anonymousImageView"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/anonymousCheckbox"
+        android:tooltipText="cvdvfdffsdsdfsfdwfwefwefwefweefe"
+        android:gravity="center_vertical"
+        android:paddingRight="10dp"
+        android:text="@string/groups.anonymous" />
+
+    <CheckBox
+        android:id="@+id/anonymousCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="2dp"
+        android:button="@drawable/language_selector_checkbox"
+        android:buttonTint="@color/app_red"
+        android:checked="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="2dp"
+        android:paddingBottom="10dp"
+        android:textColor="@color/app_red"
+        android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/addMediaImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:padding="10dp"
+        android:src="@drawable/ic_add_image" />
+
+
+    <!--<ImageView
+        android:id="@+id/addMediaImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:padding="10dp"
+        android:src="@drawable/ic_add_image" />-->
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/addMediaTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/addMediaImageView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/addMediaImageView"
+        android:layout_toEndOf="@+id/addMediaImageView"
+        android:layout_toRightOf="@+id/addMediaImageView"
+        android:gravity="center_vertical"
+        android:visibility="gone"
+        android:paddingRight="10dp"
+        android:text="@string/groups.add_image" />
+
+    <!-- <ImageView
+         android:id="@+id/anonymousImageView"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_toLeftOf="@+id/anonymousTextView"
+         android:padding="10dp"
+         android:src="@drawable/ic_incognito" />
+
+     <com.mycity4kids.widget.CustomFontTextView
+         android:id="@+id/anonymousTextView"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/anonymousImageView"
+         android:layout_alignParentBottom="true"
+         android:layout_alignTop="@+id/anonymousImageView"
+         android:layout_toLeftOf="@+id/anonymousCheckbox"
+         android:gravity="center_vertical"
+         android:paddingRight="10dp"
+         android:text="@string/groups.anonymous" />
+
+     <CheckBox
+         android:id="@+id/anonymousCheckbox"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentEnd="true"
+         android:layout_alignParentRight="true"
+         android:layout_centerVertical="true"
+         android:button="@drawable/language_selector_checkbox"
+         android:buttonTint="@color/app_red"
+         android:checked="false"
+         android:focusable="false"
+         android:focusableInTouchMode="false"
+         android:gravity="center_vertical"
+         android:paddingBottom="10dp"
+         android:paddingLeft="10dp"
+         android:paddingRight="2dp"
+         android:paddingTop="10dp"
+         android:textColor="@color/app_red"
+         android:textSize="16sp" />-->
+
+    <RelativeLayout
+        android:id="@+id/chooseMediaTypeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/trans_gray"
+        android:clickable="true"
+        android:elevation="5dp"
+        android:fitsSystemWindows="true"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/custom_dialog_bg"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/headerLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="23dp"
+                android:layout_marginTop="23dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:text="@string/choose_article_image.toolbar.title"
+                android:textColor="@color/videos.dialog.title"
+                android:textSize="18sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/imageCameraTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:paddingTop="10dp"
+                android:text="Capture image from camera"
+                android:textColor="@color/videos.upload_option.camera"
+                android:textSize="18sp"
+                app:fontName="oswald.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/imageGalleryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:paddingTop="10dp"
+                android:text="Choose image from gallery"
+                android:textColor="@color/videos.upload_option.camera"
+                android:textSize="18sp"
+                app:fontName="oswald.ttf" />
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/videoCameraTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="23dp"-->
+            <!--android:paddingRight="23dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="Capture video from camera"-->
+            <!--android:textColor="@color/videos.upload_option.camera"-->
+            <!--android:textSize="18sp"-->
+            <!--app:fontName="oswald.ttf" />-->
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/videoGalleryTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="23dp"-->
+            <!--android:paddingRight="23dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="Choose video from gallery"-->
+            <!--android:textColor="@color/videos.upload_option.gallery"-->
+            <!--android:textSize="18sp"-->
+            <!--app:fontName="oswald.ttf" />-->
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/cancelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:paddingTop="10dp"
+                android:text="@string/videos.upload_option.cancel"
+                android:textColor="@color/app_red"
+                app:fontName="oswald_regular.ttf" />
+        </LinearLayout>
+
+    </RelativeLayout>
 </RelativeLayout>
