--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -250,7 +250,7 @@
                 android:layout_marginLeft="5dp"
 
                 android:text="20"
-                android:textColor="#4A4A4A"
+                android:textColor="@color/groups.grey"
                 android:textSize="16sp"
                 app:fontName="oswald_regular.ttf" />
         </LinearLayout>
