--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_enter_registered_paytm_mobile_number_screen.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_enter_registered_paytm_mobile_number_screen.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/toolbar"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:id="@+id/paytmImageView"
@@ -155,7 +155,7 @@
             android:layout_below="@id/toolbar"
             android:paddingBottom="50dp"
 
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/bankTransferImageView"
@@ -257,7 +257,7 @@
                 android:layout_marginBottom="25dp"
                 android:background="@drawable/border_layout_for_campaign"
                 android:fontFamily="sans-serif"
-
+                android:inputType="number"
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
                 android:textSize="14sp"
@@ -281,11 +281,11 @@
                 android:layout_height="50dp"
                 android:layout_below="@id/confirmAccountNumberTextView"
                 android:layout_marginLeft="12dp"
-
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/border_layout_for_campaign"
                 android:fontFamily="sans-serif"
+                android:inputType="number"
 
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
