Bottom Sheet FAB

--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -1915,29 +1915,36 @@
                 android:visibility="invisible"
                 app:fontName="oswald.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/myMoneyCampaignTextView"
+            <LinearLayout
+                android:background="@color/white"
+                android:id="@+id/rewardsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_below="@+id/groupsMyMoneyTextView"
-                android:drawableLeft="@drawable/ic_rupee_iconn"
-                android:drawablePadding="20dp"
-                android:drawableTint="@color/app_red"
-                android:gravity="center_vertical"
                 android:paddingLeft="30dp"
-
-                android:paddingTop="12dp"
                 android:paddingRight="16dp"
-                android:paddingBottom="12dp"
-                android:text="MYMONEY"
-                android:textColor="@color/white"
-                app:fontName="oswald.ttf" />
+                android:layout_below="@+id/groupsMyMoneyTextView"
+                android:paddingBottom="12dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="@dimen/space_10"
+                    android:tint="@color/app_red"
+                    app:srcCompat="@drawable/ic_rupee_iconn" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/mymoney_logo" />
+
+            </LinearLayout>
 
             <View
                 android:id="@+id/verticalMyMoneyDrawer2"
                 android:layout_width="2dp"
                 android:layout_height="30dp"
-                android:layout_above="@+id/myMoneyCampaignTextView"
+                android:layout_above="@+id/rewardsTextView"
                 android:layout_marginLeft="100dp"
                 android:background="@color/white" />
 
