--- a/MyCity4Kids/MyCity4Kids/res/layout/splash_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/splash_activity.xml
@@ -1,14 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
-
-    <ImageView
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/momspresso_logo" />
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
