--- a/MyCity4Kids/MyCity4Kids/res/values-v14/styles.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-v14/styles.xml
@@ -24,7 +24,9 @@
         <item name="android:textColorPrimaryInverse">@color/white_color</item>
     </style>
 
-    <style name="transparent_status" parent="AppBaseTheme"></style>
+    <style name="transparent_status" parent="AppBaseTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
