--- a/MyCity4Kids/MyCity4Kids/res/values-v21/styles.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-v21/styles.xml
@@ -12,5 +12,6 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowSharedElementsUseOverlay">false</item>
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 </resources>
