--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -8,6 +8,7 @@
     <color name="app_pink">#FF4081</color>
     <color name="app_red">#D54058</color>
     <color name="app_red_50_opacity">#80D54058</color>
+    <color name="fab_button_bottom_sheet">#FAF6F7</color>
 
     <color name="app_cyan">#39B47E</color>
     <color name="app_trans_red">#D54058</color>
