--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
@@ -140,7 +140,7 @@
                     android:layout_marginLeft="@dimen/space_15"
                     android:layout_weight=".6"
                     android:background="@null"
-                    android:hint="@string/rewards_instagram_handler"
+                    android:hint="Add Instagram handle e.g. ritu_mommy"
                     android:inputType="textNoSuggestions"
                     android:paddingTop="10dp"
 
