--- a/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
@@ -7,21 +7,46 @@
     android:layout_margin="5dp"
     android:background="@drawable/short_story_border_bg">
 
-    <ImageView
-        android:id="@+id/addMomVlogImageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:id="@+id/momVlogLayout"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="4dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/add_mom_vlog_en" />
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <ImageView
+            android:id="@+id/addMomVlogImageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:src="@color/colorAccent"
+            android:scaleType="centerCrop" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/challengeNameTextMomVlog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/imageBody"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="20dp"
+            android:elevation="@dimen/space_10"
+            android:shadowColor="@color/black"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            app:fontName="oswald_regular.ttf" />
+
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/addMomVlogImageView">
+        android:layout_below="@+id/momVlogLayout">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
