Increase text size

--- a/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
@@ -33,9 +33,9 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="@string/mom_vlog_banner_title"
-            android:gravity="bottom"
+            android:gravity="bottom|center_horizontal"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="26sp"
             android:lines="2"
             android:maxLines="2"
             android:ellipsize="end"
@@ -51,7 +51,7 @@
             android:layout_marginTop="10dp"
             android:text="#GotItFromMyMom"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="26sp"
             android:gravity="center"
             android:lines="1"
             android:maxLines="1"
@@ -68,8 +68,8 @@
             android:layout_above="@+id/buttonsLayout"
             android:text="@string/mom_vlog_banner_subtitle"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:gravity="top"
+            android:textSize="22sp"
+            android:gravity="top|center_horizontal"
             android:lines="2"
             android:maxLines="2"
             android:ellipsize="end"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/addMomVlogImageView"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:clipChildren="false"
             android:clipToPadding="false">
 
@@ -104,8 +104,8 @@
                     <com.mycity4kids.widget.CustomFontTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginRight="22dp"
                         android:layout_centerVertical="true"
                         android:id="@+id/button"
                         android:drawableLeft="@drawable/ic_mom_vlog_banner_button"
