--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_enter_registered_paytm_mobile_number_screen.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_enter_registered_paytm_mobile_number_screen.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/toolbar"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/paytmImageView"
@@ -85,6 +85,8 @@
                 android:fontFamily="sans-serif"
                 android:hint="Enter your paytm Number"
                 android:inputType="number"
+                android:lines="1"
+                android:maxLines="1"
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
                 android:textSize="14sp"
@@ -155,7 +157,7 @@
             android:layout_below="@id/toolbar"
             android:paddingBottom="50dp"
 
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:id="@+id/bankTransferImageView"
@@ -204,6 +206,8 @@
                 android:layout_marginBottom="25dp"
                 android:background="@drawable/border_layout_for_campaign"
                 android:fontFamily="sans-serif"
+                android:lines="1"
+                android:maxLines="1"
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
                 android:textSize="14sp"
@@ -258,6 +262,8 @@
                 android:background="@drawable/border_layout_for_campaign"
                 android:fontFamily="sans-serif"
                 android:inputType="number"
+                android:lines="1"
+                android:maxLines="1"
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
                 android:textSize="14sp"
@@ -286,7 +292,8 @@
                 android:background="@drawable/border_layout_for_campaign"
                 android:fontFamily="sans-serif"
                 android:inputType="number"
-
+                android:lines="1"
+                android:maxLines="1"
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
                 android:textSize="14sp"
@@ -317,7 +324,8 @@
                 android:background="@drawable/border_layout_for_campaign"
                 android:fontFamily="sans-serif"
 
-
+                android:lines="1"
+                android:maxLines="1"
                 android:paddingLeft="12dp"
                 android:textColor="#4A4A4A"
                 android:textSize="14sp" />
