--- a/MyCity4Kids/MyCity4Kids/res/layout/suggested_topic_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/suggested_topic_list_item.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,11 +13,11 @@
         android:id="@+id/indexTextView"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/circular_textview_suggested_topic"
         android:ellipsize="end"
         android:gravity="center"
@@ -22,27 +25,31 @@
         android:text="11"
         android:textColor="@color/suggested_topic.index.text"
         android:textSize="10sp"
-        app:fontName="open_sans.ttf" />
+        app:fontName="open_sans.ttf"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/suggestedTopicTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_toEndOf="@+id/indexTextView"
         android:layout_toRightOf="@+id/indexTextView"
         android:ellipsize="end"
         android:gravity="left|center_vertical"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp"
         android:text="F dwadawd awd aw dw d ad ad awdaw da d ad ad awd wad wad awd aw daw da wdaw vc vfdsvf sv "
         android:textColor="@color/suggested_topic.topic_text"
         android:textSize="13sp"
-        app:fontName="open_sans.ttf" />
+        app:fontName="open_sans.ttf"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/indexTextView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--<View-->
     <!--android:id="@+id/view10"-->
@@ -51,4 +58,4 @@
     <!--android:layout_alignParentBottom="true"-->
     <!--android:background="@color/light_grey1" />-->
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
