--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_tracker.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_tracker.xml
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Earn Upto"
+                    android:text="@string/total_payout"
                     android:textColor="@color/campaign_515151"
                     android:textSize="10sp"
                     app:fontName="oswald.ttf"
