--- a/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
@@ -37,11 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/user_image"
             android:letterSpacing="-0.02"
             android:text="jshdkhskdhkk"
+            android:padding="10dp"
             android:textColor="#E6FFFFFF"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -52,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginRight="18dp"
+            android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/bookmark"
             android:background="@drawable/rounded_corner"
             android:paddingLeft="10dp"
@@ -68,11 +67,12 @@
 
         <ImageView
             android:id="@+id/bookmark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="12dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="18dp"
+            android:layout_marginRight="4dp"
             android:src="@drawable/ic_bookmark"
             android:tint="#FFFFFF"
             android:visibility="visible" />
@@ -94,10 +94,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_top_layout"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="8dp"
+        android:paddingStart="18dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="18dp"
+        android:paddingBottom="8dp"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="5sp"
         android:textColor="#CCFFFFFF"
@@ -149,7 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/video_layout"
         android:layout_marginLeft="18dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="6dp"
         android:alpha="0.65">
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -184,33 +184,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/countlikecontainer"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="6dp">
 
         <ImageView
             android:id="@+id/heart"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:padding="12dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="6dp"
             android:tint="@color/white"
             app:srcCompat="@drawable/ic_likevideo" />
 
         <ImageView
             android:id="@+id/share"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:padding="12dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="22dp"
             android:layout_toRightOf="@+id/heart"
             android:tint="@color/white"
             app:srcCompat="@drawable/ic_sharevideo" />
 
         <ImageView
             android:id="@+id/whatsapp"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:padding="12dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/share"
             android:alpha="0.85"
             android:src="@drawable/ic_whats_app"
@@ -218,10 +220,10 @@
 
         <ImageView
             android:id="@+id/comment"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="12dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/commentCount"
             android:alpha="0.9"
             android:src="@drawable/ic_comments"
